--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 align="center"><u><font color="white">🥰𝑪𝒂𝒏𝒄𝒊𝒐𝒏𝒆𝒔 𝒎𝒂𝒔 𝒇𝒂𝒎𝒐𝒔𝒂𝒔🥰</font></h1>
         <table  width="100%" bgcolor="black">
             <tr>
-                    <td align="center"><a href="https://waleska17.github.io/23waleskamartinez17/."><img src="C:\Users\sinai\Desktop\Albumes y Canciones\inicio.png"width="70" height="70"></td>
+                    <td align="center"><a href="https://waleska17.github.io/23waleskamartinez17/"><img src="C:\Users\sinai\Desktop\Albumes y Canciones\inicio.png"width="70" height="70"></td>
                         <td align="center"><font color="white"><h1>lll</h1></font></td> 
                     <td align="center"><a href="https://waleska17.github.io/Biografia/"><img src="C:\Users\sinai\Desktop\Albumes y Canciones\Biografia.png"width="80" height="80"></td>
                         <td align="center"><font color="white"><h1>lll</h1></font></td> 
